--- a/main.scss
+++ b/main.scss
@@ -7,10 +7,10 @@
 
 
 // *******************************GENERAL******************************
-*{
+* {
     margin: 0;
     padding: 0;
-   } 
+}
 
 
 body,
@@ -120,7 +120,7 @@ main {
             @media screen and (max-width: 720px) {
                 display: grid;
                 grid-template-areas: 'gridPres'
-                                     'gridIntro';
+                    'gridIntro';
                 grid-gap: 5%;
             }
 
@@ -184,34 +184,94 @@ main {
         height: 100%;
         width: 100%;
 
+        display: grid;
+        grid-template-areas: 'skillsArea'
+                             'autresArea';
+        align-items: center;
+        gap: 1px;
+
         .competences-content {
-            height: 100%;
-            width: 100%;
+            grid-area: skillsArea;
+
             position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            max-width: 1200px;
+            padding: 7vh 10% 0 10%;
 
-            display: flex;
-            flex-direction: column;
-            top: 50%;
+            display: inline-grid;
+            grid-template-areas: 'languagesArea frameworksArea';
 
-            .languages, .frameworks {
-                width: 50%;
 
-                .bar {
-                    width: 50%;
-                    border: black 1px solid;
-                    border-radius: 10px;
+            .languages {
+                grid-area: languagesArea;
+            }
 
-                    .progressBar {
-                        width: 0;
-                        height: 20px;
-                        border-radius: 10px;
-                        background: chocolate;
+            .frameworks {
+                grid-area: frameworksArea;
+            }
+
+            .languages,
+            .frameworks,{
+                text-align: center;
+                position: relative;
+                display: grid;
+                align-items: center;
+
+                .skill {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    .bar {
+                        width: 50%;
+
+                        .progressBar {
+                            width: 0;
+                            border: chocolate 2px solid;
+                        }
+
+                        p {
+                            position: relative;
+                        }
                     }
 
-                    p {
-                        position: relative;
-                    }
+
                 }
+            }
+        }
+
+        .autres {
+            grid-area: autresArea;
+
+
+            padding: 5vh 0 5vh 0;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            max-width: 1200px;
+            text-align: justify;
+            display: grid;
+            z-index: 1;
+            color: white;
+            mix-blend-mode: difference;
+
+            &::before{
+                position: absolute;
+                left: calc((100vw - 1200px)/-2);
+                width: 100vw;
+                height: 100%;
+                content: '';
+                background: rgba(51, 51, 51, 1);
+                z-index: -1;
+
+                @media screen and (max-width: calc(1200px * 1.25)) {
+                    left: calc((100vw - 80vw)/-2);
+                }
+
             }
         }
     }
@@ -227,7 +287,7 @@ main {
 
         .portfolio-content {
             grid-area: grid-portfolio;
-            padding: 5vh;
+            padding: 0 5vh 0 5vh;
             text-align: justify;
         }
     }
