--- a/style.css
+++ b/style.css
@@ -119,31 +119,82 @@ main .competences {
   top: 100%;
   height: 100%;
   width: 100%;
+  display: grid;
+  grid-template-areas: "skillsArea" "autresArea";
+  align-items: center;
+  gap: 1px;
 }
 main .competences .competences-content {
-  height: 100%;
-  width: 100%;
+  grid-area: skillsArea;
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 1200px;
+  padding: 7vh 10% 0 10%;
+  display: inline-grid;
+  grid-template-areas: "languagesArea frameworksArea";
+}
+main .competences .competences-content .languages {
+  grid-area: languagesArea;
+}
+main .competences .competences-content .frameworks {
+  grid-area: frameworksArea;
+}
+main .competences .competences-content .languages,
+main .competences .competences-content .frameworks {
+  text-align: center;
+  position: relative;
+  display: grid;
+  align-items: center;
+}
+main .competences .competences-content .languages .skill,
+main .competences .competences-content .frameworks .skill {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  top: 50%;
+  align-items: center;
 }
-main .competences .competences-content .languages, main .competences .competences-content .frameworks {
+main .competences .competences-content .languages .skill .bar,
+main .competences .competences-content .frameworks .skill .bar {
   width: 50%;
 }
-main .competences .competences-content .languages .bar, main .competences .competences-content .frameworks .bar {
-  width: 50%;
-  border: black 1px solid;
-  border-radius: 10px;
-}
-main .competences .competences-content .languages .bar .progressBar, main .competences .competences-content .frameworks .bar .progressBar {
+main .competences .competences-content .languages .skill .bar .progressBar,
+main .competences .competences-content .frameworks .skill .bar .progressBar {
   width: 0;
-  height: 20px;
-  border-radius: 10px;
-  background: chocolate;
+  border: chocolate 2px solid;
 }
-main .competences .competences-content .languages .bar p, main .competences .competences-content .frameworks .bar p {
+main .competences .competences-content .languages .skill .bar p,
+main .competences .competences-content .frameworks .skill .bar p {
   position: relative;
+}
+main .competences .autres {
+  grid-area: autresArea;
+  padding: 5vh 0 5vh 0;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 1200px;
+  text-align: justify;
+  display: grid;
+  z-index: 1;
+  color: white;
+  mix-blend-mode: difference;
+}
+main .competences .autres::before {
+  position: absolute;
+  left: calc((100vw - 1200px)/-2);
+  width: 100vw;
+  height: 100%;
+  content: "";
+  background: #333333;
+  z-index: -1;
+}
+@media screen and (max-width: calc(1200px * 1.25)) {
+  main .competences .autres::before {
+    left: calc((100vw - 80vw)/-2);
+  }
 }
 main .portfolio {
   position: relative;
@@ -154,7 +205,7 @@ main .portfolio {
 }
 main .portfolio .portfolio-content {
   grid-area: grid-portfolio;
-  padding: 5vh;
+  padding: 0 5vh 0 5vh;
   text-align: justify;
 }
 main .contact {
