--- a/main.scss
+++ b/main.scss
@@ -80,42 +80,26 @@ main {
     height: 100%;
     width: 100%;
 
+
     .acceuil {
-        position: relative;
+        position: absolute;
         height: 100%;
         width: 100%;
-        // background: url(./medias/img/lac.jpg) fixed no-repeat center/cover;
-        // display: grid;
 
 
         .acceuil-content {
+            background: url(./medias/img/geometricArt.jpg) no-repeat fixed center/cover;
             max-height: 600px;
             max-width: 1200px;
             width: 80%;
-            padding: 5%;
             display: grid;
             gap: 5%;
             grid-template-areas: 'gridPres gridIntro gridIntro';
 
-            position: relative;
+            position: absolute;
             left: 50%;
             top: 50%;
             transform: translateY(-50%) translateX(-50%);
-            // background: inherit;
-
-            // &:before {
-            //     content: '';
-            //     position: absolute;
-            //     top: 0;
-            //     left: 0;
-            //     right: 0;
-            //     bottom: 0;
-            //     box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-            //     filter: blur(5px) saturate(95%) ;
-            //     background: inherit;
-            // }
-
-
 
             @media screen and (max-width: 720px) {
                 display: grid;
@@ -126,6 +110,11 @@ main {
 
             .presentation {
                 grid-area: gridPres;
+
+                padding: 30% 20% 30% 30%;
+                width: 100%;
+
+                margin: 0 0 0 0;
 
                 display: grid;
                 grid-template-areas: 'gridJesse'
@@ -151,6 +140,7 @@ main {
                     flex-direction: column;
                     text-align: left;
 
+
                     ul {
                         list-style-type: none;
                     }
@@ -162,9 +152,14 @@ main {
             .intro {
                 grid-area: gridIntro;
 
+
                 display: grid;
                 text-align: justify;
-                padding: 20px;
+
+                padding: 5% 5% 5% 10%;
+
+                color: white;
+                mix-blend-mode: difference;
 
                 p {
                     grid-area: gridParagrapheIntro;
@@ -186,7 +181,7 @@ main {
 
         display: grid;
         grid-template-areas: 'skillsArea'
-                             'autresArea';
+            'autresArea';
         align-items: center;
         gap: 1px;
 
@@ -213,28 +208,36 @@ main {
             }
 
             .languages,
-            .frameworks,{
+            .frameworks,
+                {
                 text-align: center;
                 position: relative;
                 display: grid;
                 align-items: center;
+                gap: 2vh;
 
                 .skill {
+                    padding: 0 2vh 0 2vh;
                     width: 100%;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
+                    display: grid;
+                    grid-template-columns: 20% auto;
+                    text-align: left;
+
+                    p {
+                        &::first-letter {
+                            text-transform: uppercase;
+                        }
+                    }
 
                     .bar {
-                        width: 50%;
+                        position: relative;
+                        top: 25%;
+                        left: 0;
 
                         .progressBar {
+                            background: chocolate;
+                            height: .5vh;
                             width: 0;
-                            border: chocolate 2px solid;
-                        }
-
-                        p {
-                            position: relative;
                         }
                     }
 
@@ -255,11 +258,11 @@ main {
             max-width: 1200px;
             text-align: justify;
             display: grid;
-            z-index: 1;
+            z-index: 20;
             color: white;
             mix-blend-mode: difference;
 
-            &::before{
+            &::before {
                 position: absolute;
                 left: calc((100vw - 1200px)/-2);
                 width: 100vw;
@@ -313,22 +316,63 @@ main {
 }
 
 // .acceuil-bg {
-//     position: fixed;
-//     ;
+//     position: absolute;
 //     top: 0;
-//     height: 100%;
+//     left: 0;
+//     height: 100vh;
 //     width: 100%;
-//     background: url(./medias/img/lac.jpg) no-repeat 0px;
-//     overflow-x: visible;
+//     background: url(./medias/img/lac.jpg) center/cover no-repeat fixed;
 
 //     .acceuil-blur {
-//         position: absolute;
+//         position: relative;
+//         top: 0;
+//         left: 50%;
+//         transform: translateX(-50%);
 //         height: 100%;
 //         width: 80%;
 //         max-width: 1200px;
-//         left: 50%;
-//         transform: translateX(-50%);
 
+//         background:inherit;
+//         filter: blur(2px);
+
+//         &::before {
+//             background:inherit;
+//         }
 
 //     }
 // }
+
+
+#golden-ratio {
+    content: '';
+    height: 100%;
+    width: 100%;
+    z-index: 20;
+
+    .base {
+        position: relative;
+        top: 6vh;
+        left: 50%;
+        transform: translateX(-50%);
+        content: '';
+        height: 85vh;
+        width: calc(85vh * 1.618);
+        display: flex;
+    }
+
+    .carreV {
+        transition: ease-in-out 1s;
+    }
+
+    .rectangleV {
+        transition: ease-in-out 2s;
+    }
+
+    .carreH {
+        transition: ease 1s;
+    }
+
+    .rectangleH {
+        transition: ease 1s;
+    }
+}
