--- a/main.scss
+++ b/main.scss
@@ -18,6 +18,7 @@ html {
     height: 100%;
     width: 100%;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 
@@ -88,13 +89,12 @@ main {
 
 
         .acceuil-content {
-            background: url(./medias/img/geometricArt.jpg) no-repeat fixed center/cover;
             max-height: 600px;
             max-width: 1200px;
             width: 80%;
             display: grid;
             gap: 5%;
-            grid-template-areas: 'gridPres gridIntro gridIntro';
+            grid-template-areas: ' gridPres  gridIntro gridIntro gridPhoto';
 
             position: absolute;
             left: 50%;
@@ -106,6 +106,19 @@ main {
                 grid-template-areas: 'gridPres'
                     'gridIntro';
                 grid-gap: 5%;
+            }
+
+            .photo {
+                content: "";
+                grid-area: gridPhoto;
+                background: url(./medias/img/test.jpg) no-repeat center/cover;
+                display: grid;
+                height: 20vh;
+                width: 20vh;
+                position: relative;
+                top: 50%;
+                border-radius: 10vh;
+                transform: translateY(-50%);
             }
 
             .presentation {
@@ -155,11 +168,10 @@ main {
 
                 display: grid;
                 text-align: justify;
-
-                padding: 5% 5% 5% 10%;
-
-                color: white;
-                mix-blend-mode: difference;
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+                padding: 5% 5% 5% 5%;
 
                 p {
                     grid-area: gridParagrapheIntro;
@@ -178,6 +190,9 @@ main {
         top: 100%;
         height: 100%;
         width: 100%;
+        visibility: hidden;
+        height: 0px;
+        transition: ease .5s;
 
         display: grid;
         grid-template-areas: 'skillsArea'
@@ -208,7 +223,7 @@ main {
             }
 
             .languages,
-            .frameworks,
+            .frameworks
                 {
                 text-align: center;
                 position: relative;
@@ -287,6 +302,9 @@ main {
         height: 100%;
         width: 100%;
         display: grid;
+        visibility: hidden;
+        height: 0px;
+        transition: ease .5s;
 
         .portfolio-content {
             grid-area: grid-portfolio;
@@ -306,6 +324,9 @@ main {
         height: 100%;
         width: 100%;
         display: grid;
+        visibility: hidden;
+        height: 0px;
+        transition: ease .5s;
 
         .contact-content {
             grid-area: grid-contact;
@@ -348,31 +369,17 @@ main {
     height: 100%;
     width: 100%;
     z-index: 20;
+    visibility: hidden;
+    height: 0px;
+    transition: ease .5s;
 
     .base {
         position: relative;
-        top: 6vh;
         left: 50%;
         transform: translateX(-50%);
         content: '';
-        height: 85vh;
-        width: calc(85vh * 1.618);
+        height: 90vh;
+        width: calc(90vh * 1.618);
         display: flex;
-    }
-
-    .carreV {
-        transition: ease-in-out 1s;
-    }
-
-    .rectangleV {
-        transition: ease-in-out 2s;
-    }
-
-    .carreH {
-        transition: ease 1s;
-    }
-
-    .rectangleH {
-        transition: ease 1s;
     }
 }
