--- a/main.scss
+++ b/main.scss
@@ -18,7 +18,6 @@ html {
     height: 100%;
     width: 100%;
     margin: 0;
-    scroll-behavior: smooth;
 }
 
 
@@ -31,9 +30,9 @@ html {
     top: 0;
     width: 100%;
     background: #333;
-    transition: .8s ease-in-out;
+    transition: ease-in-out;
     height: 5vh;
-    z-index: 1;
+    z-index: 20;
     display: flex;
 
     ul {
@@ -80,12 +79,15 @@ html {
 main {
     height: 100%;
     width: 100%;
+    position: absolute;
+    overflow: hidden;
 
 
     .acceuil {
         position: absolute;
         height: 100%;
         width: 100%;
+        transition: ease-in-out;
 
 
         .acceuil-content {
@@ -186,13 +188,12 @@ main {
     // ******************************************COMPETENCES***********************************
 
     .competences {
-        position: relative;
-        top: 100%;
+        position: absolute;
+        // top: 100%;
         height: 100%;
         width: 100%;
         visibility: hidden;
-        height: 0px;
-        transition: ease .5s;
+        transition: ease-in-out;
 
         display: grid;
         grid-template-areas: 'skillsArea'
@@ -273,7 +274,6 @@ main {
             max-width: 1200px;
             text-align: justify;
             display: grid;
-            z-index: 20;
             color: white;
             mix-blend-mode: difference;
 
@@ -297,14 +297,13 @@ main {
 
     // ***********************************PORTFOLIO*****************************
     .portfolio {
-        position: relative;
-        top: 100%;
+        position: absolute;
+        // top: 100%;
         height: 100%;
         width: 100%;
         display: grid;
         visibility: hidden;
-        height: 0px;
-        transition: ease .5s;
+        transition: ease-in-out;
 
         .portfolio-content {
             grid-area: grid-portfolio;
@@ -319,14 +318,13 @@ main {
 
 
     .contact {
-        position: relative;
-        top: 100%;
+        // position: relative;
+        // top: 100%;
         height: 100%;
         width: 100%;
         display: grid;
         visibility: hidden;
-        height: 0px;
-        transition: ease .5s;
+        transition: ease-in-out .5s;
 
         .contact-content {
             grid-area: grid-contact;
@@ -365,13 +363,13 @@ main {
 
 
 #golden-ratio {
+    position: absolute;
     content: '';
     height: 100%;
     width: 100%;
-    z-index: 20;
     visibility: hidden;
     height: 0px;
-    transition: ease .5s;
+    transition: ease-in-out;
 
     .base {
         position: relative;
