--- a/main.scss
+++ b/main.scss
@@ -21,8 +21,6 @@ html {
 }
 
 
-
-
 // *************************NAVBAR*********************
 
 .navbar {
@@ -72,8 +70,15 @@ html {
 }
 
 
-
-
+// **********************************VOLETS****************************
+.volet {
+    height : 100%;
+    width : 100%;
+    content : '';
+    position : absolute;
+    top : -100vh;
+    background : white;
+}
 
 // **********************************ACCEUIL****************************
 main {
