--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500&display=swap');
+
+
+
 // *******************************GENERAL******************************
 // *******************************NAVBAR*******************************
 // *******************************ACCEUIL******************************
@@ -10,6 +14,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Source Code Pro', monospace;
 }
 
 
@@ -28,7 +33,7 @@ html {
     top: 0;
     width: 100%;
     background: #333;
-    transition: ease-in-out;
+    transition: ease .5s;
     height: 5vh;
     z-index: 20;
     display: flex;
@@ -38,7 +43,7 @@ html {
 
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         list-style-type: none;
         align-items: center;
 
@@ -72,12 +77,12 @@ html {
 
 // **********************************VOLETS****************************
 .volet {
-    height : 100%;
-    width : 100%;
-    content : '';
-    position : absolute;
-    top : -100vh;
-    background : white;
+    height: 100%;
+    width: 100%;
+    content: '';
+    position: absolute;
+    top: -100vh;
+    background: white;
 }
 
 // **********************************ACCEUIL****************************
@@ -229,8 +234,7 @@ main {
             }
 
             .languages,
-            .frameworks
-                {
+            .frameworks {
                 text-align: center;
                 position: relative;
                 display: grid;
@@ -302,18 +306,126 @@ main {
     // ***********************************PORTFOLIO*****************************
     .portfolio {
         position: absolute;
-        // top: 100%;
-        height: 100%;
         width: 100%;
-        display: grid;
+        height: 100%;
+
+        display: flex;
         visibility: hidden;
         transition: ease-in-out;
+        overflow: hidden;
 
-        .portfolio-content {
-            grid-area: grid-portfolio;
-            padding: 0 5vh 0 5vh;
+        div {
+            position: relative;
             text-align: justify;
+            height: 100%;
+            display: flex;
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+            overflow: scroll;
         }
+
+        .right {
+            background: #333;
+            right: 0;
+            width: 100vw - (100vw * 0.618);
+
+            flex-direction: column;
+            justify-content: start;
+
+
+
+            &::-webkit-scrollbar {
+                display: none;
+              }
+
+            div {
+                flex-shrink: 0;
+                position: relative;
+                height: 100%;
+                right: -50%;
+                transform: translateX(-50%);
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: center;
+                z-index: 10;
+
+                img {
+                    height: 80vh;
+                    z-index: 10;
+                }
+            }
+        }
+
+        .left {
+            width: 100vw * 0.618;
+            background: #fff;
+            
+            flex-direction: column-reverse;
+            justify-content: space-between;
+
+            &::-webkit-scrollbar {
+                display: none;
+              }
+
+
+
+
+            div {
+                height: 100%;
+                position: relative;
+                left: 50%;
+                transform: translateX(-50%);
+                justify-content: space-around;
+                align-items: center;
+
+                display: flex;
+                flex-direction: column;
+                flex-shrink: 0;
+
+
+                p {
+                    width: 100% * 0.618;
+                    text-align: justify;
+                }
+            }
+        }
+
+        .up {
+            width: 30vh;
+            height: 30vh;
+            position:absolute;
+            top: 10vh;
+            left: 100vw * 0.618;
+            z-index: 10;
+            transform: translateX(-50%);
+            display: grid;
+            align-items: center;
+            text-align: center;
+            border-radius: 0 100vh 50vh 100vh;
+            background-color: #333;
+            z-index: 1;
+
+
+        }
+
+        .down {
+            content: '';
+            width: 30vh;
+            height: 30vh;
+            position:absolute;
+            bottom: 10vh;
+            left: 100vw * 0.618;
+            transform: translateX(-50%);
+            display: grid;
+            align-items: center;
+            text-align: center;
+            border-radius: 50vh 100vh 0 100vh;
+            z-index: 11;
+            background-color: #fff;
+
+        }
+
     }
 
 
@@ -322,7 +434,7 @@ main {
 
 
     .contact {
-        // position: relative;
+        position: relative;
         // top: 100%;
         height: 100%;
         width: 100%;
@@ -330,10 +442,28 @@ main {
         visibility: hidden;
         transition: ease-in-out .5s;
 
-        .contact-content {
-            grid-area: grid-contact;
-            padding: 5vh;
-            text-align: justify;
+        .playground {
+            height: 70%;
+            width: 70%;
+            position: relative;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            border: black 1px solid;
+            content: '';
+            background: #fff;
+            cursor: none;
+
+            #plateforme {
+                height: 2%;
+                width: 5%;
+                background: black;
+                position: relative;
+                top: 97%;
+                left: 50%;
+                transform: translateY(-50%);
+                content: '';
+            }
         }
     }
 }
